ArrowLauncher: Rearrange settings into categories
[@neobuddy89: Updated to latest A13]
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -203,4 +203,18 @@
     <!-- The max scale for the wallpaper when it's zoomed in -->
     <item name="config_wallpaperMaxScale" format="float" type="dimen">0</item>
 
+    <!-- String representing the fragment class for app drawer settings activity.-->
+    <string name="app_drawer_settings_fragment_name" translatable="false">com.android.launcher3.settings.SettingsAppDrawer$AppDrawerSettingsFragment</string>
+
+    <!-- String representing the fragment class for home screen settings activity.-->
+    <string name="home_screen_settings_fragment_name" translatable="false">com.android.launcher3.settings.SettingsHomescreen$HomescreenSettingsFragment</string>
+
+    <!-- String representing the fragment class for icons settings activity.-->
+    <string name="icons_settings_fragment_name" translatable="false">com.android.launcher3.settings.SettingsIcons$IconsSettingsFragment</string>
+
+    <!-- String representing the fragment class for misc settings activity.-->
+    <string name="misc_settings_fragment_name" translatable="false">com.android.launcher3.settings.SettingsMisc$MiscSettingsFragment</string>
+
+    <!-- String representing the fragment class for recents view settings activity.-->
+    <string name="recents_settings_fragment_name" translatable="false">com.android.launcher3.settings.SettingsRecents$RecentsSettingsFragment</string>
 </resources>
