--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -204,6 +204,9 @@
     <!-- The max scale for the wallpaper when it's zoomed in -->
     <item name="config_wallpaperMaxScale" format="float" type="dimen">0</item>
 
+    <!-- Whether to place memory info below action buttons. -->
+    <bool name="config_placeMemInfoBelowActions">true</bool>
+
     <!-- String representing the fragment class for app drawer settings activity.-->
     <string name="app_drawer_settings_fragment_name" translatable="false">com.android.launcher3.settings.SettingsAppDrawer$AppDrawerSettingsFragment</string>
 
