--- a/res/values-hu-rHU/kenvyra_strings.xml
+++ b/res/values-hu-rHU/kenvyra_strings.xml
@@ -7,7 +7,7 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Application name -->
     <!-- General -->
-    <string name="settings_title">Az \'Evo X Launcher\' beállitásai</string>
+    <string name="settings_title">Az \'Kenvyra Launcher\' beállitásai</string>
     <!-- Categories -->
     <string name="home_category_title">Főképernyő</string>
     <string name="home_category_summary">A \'Google Now\' panel és egyebek beállítása</string>
