--- a/res/values-tr-rTR/kenvyra_strings.xml
+++ b/res/values-tr-rTR/kenvyra_strings.xml
@@ -7,7 +7,7 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Application name -->
     <!-- General -->
-    <string name="settings_title">Evo X Launcher Ayarları</string>
+    <string name="settings_title">Kenvyra Launcher Ayarları</string>
     <!-- Categories -->
     <string name="home_category_title">Ana ekran</string>
     <string name="home_category_summary">Google now paneli ve daha fazlasını ayarlayın</string>
