--- a/res/values-cs-rCZ/kenvyra_strings.xml
+++ b/res/values-cs-rCZ/kenvyra_strings.xml
@@ -7,7 +7,7 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Application name -->
     <!-- General -->
-    <string name="settings_title">Nastavení spouštěče Evo X</string>
+    <string name="settings_title">Nastavení spouštěče Kenvyra</string>
     <!-- Categories -->
     <string name="home_category_title">Plocha</string>
     <string name="home_category_summary">Nastavení panelu Google Now a dalších funkcí</string>
