--- a/res/values-fa-rIR/kenvyra_strings.xml
+++ b/res/values-fa-rIR/kenvyra_strings.xml
@@ -8,7 +8,7 @@
     <!-- Application name -->
     <!-- Folder titles -->
     <!-- General -->
-    <string name="settings_title">تنظیمات لانچر Evo X</string>
+    <string name="settings_title">تنظیمات لانچر Kenvyra</string>
     <!-- Categories -->
     <string name="home_category_title">صفحه اصلی</string>
     <string name="home_category_summary">پنل گوگل و موارد دیگر را تنظیم کنید</string>
