--- a/res/values-in-rID/kenvyra_strings.xml
+++ b/res/values-in-rID/kenvyra_strings.xml
@@ -7,7 +7,7 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Application name -->
     <!-- General -->
-    <string name="settings_title">Setelan peluncur Evolution X</string>
+    <string name="settings_title">Setelan peluncur Kenvyra</string>
     <!-- Categories -->
     <string name="home_category_title">Layar beranda</string>
     <string name="home_category_summary">Atur panel Google Now dan lainnya</string>
