--- a/res/values-ro-rRO/kenvyra_strings.xml
+++ b/res/values-ro-rRO/kenvyra_strings.xml
@@ -8,7 +8,7 @@
     <!-- Application name -->
     <!-- Folder titles -->
     <!-- General -->
-    <string name="settings_title">Setări Lansator Evo X</string>
+    <string name="settings_title">Setări Lansator Kenvyra</string>
     <!-- Categories -->
     <string name="home_category_title">Ecranul principal</string>
     <string name="home_category_summary">Setează panoul Google Now și altele</string>
