--- a/res/values-ru-rRU/kenvyra_strings.xml
+++ b/res/values-ru-rRU/kenvyra_strings.xml
@@ -7,7 +7,7 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Application name -->
     <!-- General -->
-    <string name="settings_title">Настройки Evo X Launcher</string>
+    <string name="settings_title">Настройки Kenvyra Launcher</string>
     <!-- Categories -->
     <string name="home_category_title">Главный экран</string>
     <string name="home_category_summary">Включить панель Google Now и многое другое</string>
