--- a/res/values-uk-rUA/kenvyra_strings.xml
+++ b/res/values-uk-rUA/kenvyra_strings.xml
@@ -7,7 +7,7 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Application name -->
     <!-- General -->
-    <string name="settings_title">Налаштування лаунчера Evo X</string>
+    <string name="settings_title">Налаштування лаунчера Kenvyra</string>
     <!-- Categories -->
     <string name="home_category_title">Головний екран</string>
     <string name="home_category_summary">Встановити панель Google Now та інше</string>
