--- a/res/values-zh-rCN/kenvyra_strings.xml
+++ b/res/values-zh-rCN/kenvyra_strings.xml
@@ -7,7 +7,7 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Application name -->
     <!-- General -->
-    <string name="settings_title">Evo X 启动器设置</string>
+    <string name="settings_title">Kenvyra 启动器设置</string>
     <!-- Categories -->
     <string name="home_category_title">主屏幕</string>
     <string name="home_category_summary">设置 Google now 面板等</string>
